// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtistArea snapshots should match the correct snapshot 1`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "1234",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="c1e51d"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 2`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "33",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="ab7d3d"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 3`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "44",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="0393be"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 4`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "22",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="8d024c"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 5`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist="1234"
    key="2ade92"
  />
</div>
`;
